Fix compose error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
     init: true
     restart: "unless-stopped"
 
-    volumes: /var/run/docker.sock:/var/run/docker.sock
+    volumes: 
+      - "/var/run/docker.sock:/var/run/docker.sock"
 
     environment:
       - LISTEN_PORT=45321
