Dockerize web content, extend nginx. Update compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,16 @@
 # Move a folder up with, /dashboard, /api, and /nging_conf in the folder
 version: "3.7"
 services:
-  nginx:
-    image: nginx:latest
-    contianer_name: foundry_dashboard
+  foundry_dashboard:
+    image: kenishi86/foundry-dashboard:latest
+    container_name: foundry_dashboard
     restart: "unless-stopped"
 
     volumes: 
-      - "./foundry_dashboard/build:/usr/share/nginx/html:ro"
       - "./nginx_conf/nginx.conf:/etc/nginx/nginx.conf:ro"
       - "./nginx_conf/.htpasswds:/etc/nginx/.htpasswds:ro"
     ports:
-      - "33000/tcp"
+      - "33000:33000"
     
   foundry_dashboard_api:
     image: kenishi86/foundry-dashboard-api:latest
@@ -26,4 +25,4 @@ services:
       - LISTEN_PORT=45321
     
     ports:
-      - "127.0.0.1:45321"
+      - "127.0.0.1:45321:45321"
