--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,18 @@ version: "3.7"
 services:
   foundry_dashboard:
     image: kenishi86/foundry-dashboard:latest
-    container_name: foundry_dashboard
+    container_name: foundry-dashboard
     restart: "unless-stopped"
 
     volumes: 
       - "./nginx_conf/nginx.conf:/etc/nginx/nginx.conf:ro"
-      - "./nginx_conf/.htpasswds:/etc/nginx/.htpasswds:ro"
+      - "./nginx_conf/.htpasswd:/etc/nginx/.htpasswd:ro"
     ports:
-      - "33000:33000"
+      - "33000:80"
     
   foundry_dashboard_api:
     image: kenishi86/foundry-dashboard-api:latest
-    container_name: foundry_dashboard_api
+    container_name: foundry-dashboard-api
     init: true
     restart: "unless-stopped"
 
